--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,17 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplelightbox@2.4.0/dist/simple-lightbox.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/simplelightbox@2.4.0/dist/simple-lightbox.min.js"></script>
-  
-  
+  <script type="module" src="./js/1-gallery.js" defer></script>
+  <link rel="stylesheet" href="./css/styles.css"/>
   <style> 
     .sl-overlay { 
       background: rgba(46, 47, 66, 0.80)  !important; 
     } 
   </style>
   <title>gallery</title>
-  <script type="module" crossorigin src="/goit-js-hw-09/commonHelpers.js"></script>
-  <link rel="modulepreload" crossorigin href="/goit-js-hw-09/assets/modulepreload-polyfill-ec808ebb.js">
-  <link rel="stylesheet" href="/goit-js-hw-09/assets/styles-d93dbcc5.css">
 </head>
 <body>
   <ul class="gallery">
