--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,13 +5,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-     
-  
+  <link rel="stylesheet" href="./css/styles.css">   
+  <script type="module" src="./js/2-form.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form</title>
-  <script type="module" crossorigin src="/goit-js-hw-09/commonHelpers2.js"></script>
-  <link rel="modulepreload" crossorigin href="/goit-js-hw-09/assets/modulepreload-polyfill-ec808ebb.js">
-  <link rel="stylesheet" href="/goit-js-hw-09/assets/styles-d93dbcc5.css">
 </head>
 <body>
 <form class="feedback-form" autocomplete="off">
